<resources>
    <string name="app_name">Небоскребот</string>
    <string name="textMain">Ваши действие</string>
    <string name="addAccount">Добавить аккаунт</string>
    <string name="loadAccount">Выбрать аккаунт</string>
    <integer name="com_vk_sdk_AppId">6832550</integer>
    <string name="title_activity_add_account">Вход</string>
    <string name="textHintPassword">Пароль от аккаунта</string>
    <string name="textHintLogin">Логин от аккаунта</string>
    <string name="textLogin">Введите данные от аккаунта</string>
    <string name="btnLoginText">Войти</string>

    <string name="bot_worked_notification_title_template">Bot worked: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="bot_worked_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="textSupport">Обратная связь</string>
    <string name="textVkGroup">Группа вконтакте</string>
    <string name="textTGChannel">Канал в телеграме</string>
    <string name="authWithVk">Войти с помощью vk.com</string>
    <string name="textNew">Новости</string>
    <string name="textUpdateButton">Обновление</string>
    <string name="helpMoney">Помочь проекту</string>
    <string name="title_activity_help_money">HelpMoneyActivity</string>
    <string name="licText">"Автор программы не несет никакой ответственности, ни за какой ущерб, причиненный прямым или косвенным образом. Всю ответственность несет лицо, использующее данное программное обеспечение.  Автор оставляет за собой право вносить в программу любые изменения и документировать их в той мере, в какой считает нужным.
        В случае обнаружения каких-либо сбоев в работе программы или несоответствия ее документации, просьба сообщить об этом Автору.

        Продолжив использование - Вы подтверждаете, что вы внимательно прочитали и приняли условия данного соглашения и правил.

        Если не согласны - пожалуйста удалите это приложение"</string>
</resources>
