<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAllCaps="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textMain"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <Button
            android:id="@+id/btnAddAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addAccount"
            android:text="@string/addAccount"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnLoadAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loadAccount"
            android:text="@string/loadAccount"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSupport"
            android:text="@string/textSupport"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onGroupVK"
            android:text="@string/textVkGroup"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCannelTG"
            android:text="@string/textTGChannel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onNews"
            android:text="@string/textNew"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onUpdates"
            android:text="@string/textUpdateButton"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/helpMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="helpMoney"
            android:text="@string/helpMoney"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewVersionApp"
        android:layout_width="93dp"
        android:layout_height="13dp"
        android:text="Версия приложение: 0.3 "
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="145dp"
        android:layout_height="19dp"
        android:text="@ Никакие права не защищены, автор программы не несет ответственность не на что!!!"
        android:textSize="6sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>